Correcting Pageing logic in the ReviewService